# Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo/src/catalyst/ChangeLog,v 1.644 2006/07/12 18:34:52 wolf31o2 Exp $

  12 Jul 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/support/rc-update.sh:
  Removed famd from the default runlevel for gentoo-release-livecd. It really
  shouldn't cause a problem, but I prefer it stay a bit clean.

  11 Jul 2006; Chris Gianelloni <wolf31o2@gentoo.org> 
  modules/generic_stage_target.py, targets/support/bootloader-setup.sh,
  targets/support/create-iso.sh, targets/support/kmerge.sh,
  targets/support/livecdfs-update.sh, targets/support/mips-arcload_conf.sh:
  Added patches from Joshua Kinard <kumba@gentoo.org> from bug #139337.

  05 Jul 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  -livecd/cdtar/silo-1.2.6-sparc-cdtar.tar.bz2,
  +livecd/cdtar/silo-1.4.13-sparc-cdtar.tar.bz2,
  targets/support/bootloader-setup.sh:
  Added patch from Gustavo Zacarias <gustavoz@gentoo.org> for sparc/silo
  parameters support. This is for bug #139300.

  28 Jun 2006; Chris Gianelloni <wolf31o2@gentoo.org> catalyst,
  modules/generic_stage_target.py, modules/livecd_stage2_target.py,
  targets/support/filesystem-functions.sh:
  Added two patches from Joshua Kinard from bug #138255 to fix livecd/fsops
  and also to remove some redundant values from livecd-stage2's valid_values.
  This is 2.0_rc49.

  28 Jun 2006; Chris Gianelloni <wolf31o2@gentoo.org> arch/ppc.py,
  arch/x86.py:
  Fixed invocation of linux32 for x86 and ppc.  This is for bug #138080.

  22 Jun 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  modules/generic_stage_target.py:
  Fix a problem where catalyst was creating an initial list, then putting that
  list inside another. Thanks to Andrew Gaffney <agaffney@gentoo.org> for
  pointing it out and for the fix. This is for bug #136351.

  22 Jun 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/support/unmerge.sh: